<resources>

    <!-- App -->
    <string name="app_name">CalcPoly</string>
    <string name="action_settings">Settings</string>

    <!-- Main view -->
    <string name="text_c0">C0</string>
    <string name="text_c1">C1</string>
    <string name="text_c2">C2</string>
    <string name="text_c3">C3</string>
    <string name="button_show">SHOW</string>
    <string name="title_activity_plot">PlotActivity</string>

    <!-- Preferences max value -->
    <string name="pref_max_title">Max value</string>
    <string name="pref_max_description">Specify max value for plotting</string>
    <string name="pref_max_key">max</string>
    <string name="pref_max_default">100</string>

    <!-- Preferences step -->
    <string name="pref_step_title">Step</string>
    <string name="pref_step_description">Specify step size for plotting</string>
    <string name="pref_step_key">step</string>
    <string name="pref_step_default">1</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settigs">SettigsActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
