<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!-- C0 -->

    <TextView
        android:id="@+id/textViewC0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_c0"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/primary_text_default_material_light"
        />

    <EditText
        android:id="@+id/editTextC0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textViewC0"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:inputType="numberDecimal"
        android:layout_alignParentTop="true" />

    <!-- C1 -->

    <TextView
        android:id="@+id/textViewC1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/text_c1"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:layout_alignTop="@+id/editTextC1"
        android:textColor="@color/primary_text_default_material_light"
        />

    <EditText
        android:id="@+id/editTextC1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextC0"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textViewC1"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:inputType="numberDecimal"
        android:textSize="@dimen/abc_text_size_medium_material"
        />

    <!-- C2 -->

    <TextView
        android:id="@+id/textViewC2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/text_c2"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:layout_alignTop="@+id/editTextC2"
        android:textColor="@color/primary_text_default_material_light"
        />

    <EditText
        android:id="@+id/editTextC2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextC1"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textViewC2"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:inputType="numberDecimal"
        android:textSize="@dimen/abc_text_size_medium_material"
        />

    <!-- C3 -->

    <TextView
        android:id="@+id/textViewC3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/text_c3"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:layout_alignTop="@+id/editTextC3"
        android:textColor="@color/primary_text_default_material_light"
        />

    <EditText
        android:id="@+id/editTextC3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextC2"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textViewC3"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:inputType="numberDecimal"
        android:textSize="@dimen/abc_text_size_medium_material"
        />

    <!-- Button -->

    <Button
        android:id="@+id/buttonShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_show"
        android:layout_alignEnd="@+id/editTextC3"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:background="@color/primary_material_dark"
        android:textColor="@color/primary_text_default_material_dark"
        />

</RelativeLayout>
